<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_section_profile">Profile</string>
    <string name="title_section_login">Login</string>
    <string name="title_section_logout">Logout</string>
    <string name="title_section_all_courses">All Courses</string>
    <string name="title_section_news">News</string>
    <string name="title_section_dates">My Course Dates</string>
    <string name="title_section_downloads">Downloads</string>
    <string name="title_section_settings">Settings</string>
    <string name="title_section_my_courses">My Courses</string>
    <string name="title_section_certificates">Certificates</string>
    <string name="title_section_channels">Channels</string>
    <string name="title_section_podcasts">Podcasts</string>
    <string name="title_section_microlearning">Microlearning</string>
    <string name="header_current_and_upcoming_courses">Current and upcoming courses</string>
    <string name="header_self_paced_courses">Self-paced courses</string>
    <string name="header_current_courses">Current courses</string>
    <string name="header_future_courses">Future courses</string>
    <string name="header_my_current_courses">My current courses</string>
    <string name="header_my_future_courses">My upcoming courses</string>
    <string name="banner_running">Running</string>
    <string name="banner_self_paced">Self-paced</string>
    <string name="banner_external">External</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_unenroll">Un-enroll</string>
    <string name="action_language">Change language</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_share">Share course</string>
    <string name="action_course_dates">Course dates</string>
    <string name="action_helpdesk">Technical Support</string>
    <string name="tab_learnings">Learnings</string>
    <string name="tab_discussions">Discussions</string>
    <string name="tab_progress">Progress</string>
    <string name="tab_course_details">Course details</string>
    <string name="tab_certificates">Certificates</string>
    <string name="tab_announcements">Announcements</string>
    <string name="tab_documents">Documents</string>
    <string name="tab_recap">Recap</string>
    <string name="btn_enroll">Enroll</string>
    <string name="btn_continue_course">Continue</string>
    <string name="btn_external_course">Open external</string>
    <string name="btn_external_course_target">Go to external course on %1$s</string>
    <string name="btn_course_details">Show details</string>
    <string name="btn_channel_courses">Show more</string>
    <string name="btn_channel_slider_more">Show more courses</string>
    <string name="btn_starts_soon">Not yet started</string>
    <string name="btn_play_cast">&#xe652;\n Play on Cast device</string>
    <string name="btn_display_issues">Display issues?</string>
    <string name="dialog_unenroll_title">Un-enroll this course?</string>
    <string name="dialog_unenroll_message">You\'ll be un-enrolled from this course.</string>
    <string name="dialog_unenroll_yes">Un-enroll</string>
    <string name="dialog_negative">Cancel</string>
    <string name="dialog_no">No</string>
    <string name="dialog_confirm_delete_title">Delete this file?</string>
    <string name="dialog_confirm_delete_message">The downloaded file will be deleted and can\'t used offline anymore.</string>
    <string name="dialog_confirm_delete_title_multi">Delete this files?</string>
    <string name="dialog_confirm_delete_message_multi">The downloaded files will be deleted and can\'t used offline anymore.</string>
    <string name="dialog_confirm_delete_yes">Delete</string>
    <string name="dialog_confirm_delete_yes_always">Delete and don\'t ask again</string>
    <string name="dialog_mobile_download_title">Allow mobile downloads?</string>
    <string name="dialog_mobile_download_message">Do you want to allow downloads on mobile networks? Be aware that this affects your mobile data volume.</string>
    <string name="dialog_mobile_download_yes">Allow</string>
    <string name="dialog_progress_title">Please wait</string>
    <string name="dialog_progress_message">Loading&#8230;</string>
    <string name="dialog_module_downloads_title">Download all content for %1$s?</string>
    <string name="dialog_title_permissions">External storage access required</string>
    <string name="dialog_permissions">Please allow this app to access your external storage in order to use this functionality.</string>
    <string name="dialog_download_slides_title">Download slides?</string>
    <string name="dialog_download_slides_message">The slides file will be downloaded.</string>
    <string name="dialog_download_slides_yes">Download</string>
    <string name="dialog_app_being_prepared">Please wait while the app is being prepared.</string>
    <string name="dialog_storage_migration">Currently there are files stored in %1$s, do you want to move them to %2$s?</string>
    <string name="dialog_storage_migration_confirm">Migrate</string>
    <string name="dialog_storage_migration_title">Storage migration</string>
    <string name="dialog_storage_migration_message">Migration in progress. Please wait until the process is finished. Do not remove the storage medium.</string>
    <string name="dialog_storage_migration_successful">Migration completed successfully!</string>
    <string name="dialog_api_deprecation_title">Update %1$s</string>
    <string name="dialog_api_deprecation_message">%1$s won\'t run after %2$s anymore unless you update the app.</string>
    <string name="dialog_api_deprecation_yes">Update</string>
    <string name="dialog_api_deprecation_no">Skip</string>
    <string name="dialog_api_expiration_title">Update %1$s</string>
    <string name="dialog_api_expiration_message">%1$s won\'t run unless you update the app.</string>
    <string name="dialog_api_expiration_yes">Update</string>
    <string name="dialog_api_expiration_no">Close</string>
    <string name="dialog_server_maintenance_title">Server maintenance ongoing</string>
    <string name="dialog_server_maintenance_message">A server maintenance is currently being performed. Please try again later.</string>
    <string name="dialog_server_maintenance_no">Close</string>
    <string name="dialog_server_error_title">Server issue</string>
    <string name="dialog_server_error_message">There was an issue while contacting the server. Please try again later.</string>
    <string name="dialog_server_error_no">Close</string>
    <string name="dialog_course_dates_title">Course dates</string>
    <string name="dialog_course_dates_no">Close</string>
    <string name="dialog_date_info_default_title">Date details</string>
    <string name="dialog_date_info_local">Local</string>
    <string name="dialog_date_info_utc">World time</string>
    <string name="dialog_date_info_no">Close</string>
    <string name="dialog_date_info_title_announcement">Publishing date</string>
    <string name="dialog_date_info_title_course">Course duration</string>
    <string name="dialog_date_info_title_section">Start date</string>
    <string name="dialog_external_content_title">External content</string>
    <string name="dialog_external_content_message_lti">This task is opened with an external tool that is not part of the %1$s app. It may not be optimized for mobile devices, so we recommend that you complete it on a computer.\n\nDo you want to launch it anyway?</string>
    <string name="dialog_external_content_message_peer">Peer Assessments are not optimized for mobile, so we recommend that you complete it on a computer.\n\nDo you want to open it anyway?</string>
    <string name="dialog_external_content_yes_lti">Launch</string>
    <string name="dialog_external_content_yes_always_lti">Launch and don\'t ask again</string>
    <string name="dialog_external_content_yes_peer">Open</string>
    <string name="dialog_external_content_yes_always_peer">Open and don\'t ask again</string>
    <string name="title_activity_module">Module</string>
    <string name="error">An error occurred, please try again later.</string>
    <string name="error_plain">An error occurred.</string>
    <string name="trying_reconnect">Trying to reconnect&#8230;</string>
    <string name="error_email">Please insert valid Email address.</string>
    <string name="error_password">Please insert valid Password.</string>
    <string name="login">Login</string>
    <string name="login_with_credentials">Login with %1$s credentials:</string>
    <string name="logout">Logout</string>
    <string name="input_email">* Email</string>
    <string name="hint_email">Email</string>
    <string name="input_password">* Password</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="header_new">No account yet? Create one</string>
    <string name="button_new">Create new account</string>
    <string name="enrollments">enrollments</string>
    <string name="total">Total</string>
    <string name="points">Points</string>
    <string name="scan_qr">Please scan the QR Code</string>
    <string name="slides_as_pdf">Presentation slides as PDF</string>
    <string name="transcript_as_pdf">Transcript as PDF</string>
    <string name="video_hd_as_mp4">Video (HD) as MP4</string>
    <string name="video_sd_as_mp4">Video (SD) as MP4</string>
    <string name="download">Download</string>
    <string name="open">Open</string>
    <string name="play">Play</string>
    <string name="delete">Delete</string>
    <string name="files">Files</string>
    <string name="overall">Overall</string>
    <string name="courses">Courses</string>
    <string name="available_at">Available at %1$s</string>
    <string name="download_all_content">Download contents</string>
    <string name="intro_overlay_text">Touch to cast videos on TV</string>
    <string name="or">or</string>
    <string name="login_sso">SSO</string>
    <string name="login_sso_hint">SSO Login</string>
    <string name="ok">OK</string>
    <string name="not_available">Not available</string>
    <string name="item_proctored_summary">This item can\'t be accessed on mobile because you booked a qualified certificate. Please use a computer to access it.</string>
    <string name="self_test_points">%1$.1f of %2$.1f self-test points</string>
    <string name="assignments_points">%1$.1f of %2$.1f assignment points</string>
    <string name="bonus_points">%1$.1f of %2$.1f bonus points</string>
    <string name="items_visited">%1$.0f of %2$.0f visited</string>
    <string name="course_date_coming_soon">Coming soon</string>
    <string name="course_date_since">Since %s</string>
    <string name="course_date_self_paced">Self-paced</string>
    <string name="course_date_beginning">Beginning %s</string>
    <string name="course_list_my_dates_title">My course dates</string>
    <string name="course_date_list_title">Course Date Overview</string>
    <string name="course_date_next">Next up: %1$s</string>
    <string name="course_dates_today">Today</string>
    <string name="course_dates_week">Next 7 days</string>
    <string name="course_dates_later">Later</string>
    <string name="course_dates_all">All</string>
    <string name="course_date_type_course_start">Course start</string>
    <string name="course_date_type_section_start">Section start</string>
    <string name="hint_issue">Technical issue</string>
    <string name="helpdesk_info_text_logged_out">Please describe your technical issue using the text box below. Information about your mobile device and your email address will be submitted along with your issue report.</string>
    <string name="hint_title">Title</string>
    <string name="hint_topic">Topic</string>
</resources>