<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/navigation_group_login"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_login"
            android:icon="@drawable/ic_profile"
            android:orderInCategory="0"
            android:title="@string/title_section_login" />
    </group>

    <group
        android:id="@+id/navigation_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_channels"
            android:icon="@drawable/ic_channels"
            android:orderInCategory="1"
            android:title="@string/title_section_channels" />
        <item
            android:id="@+id/navigation_all_courses"
            android:icon="@drawable/ic_all_courses"
            android:orderInCategory="1"
            android:title="@string/title_section_all_courses" />
        <item
            android:id="@+id/navigation_my_courses"
            android:icon="@drawable/ic_my_courses"
            android:orderInCategory="1"
            android:title="@string/title_section_my_courses" />
        <item
            android:id="@+id/navigation_dates"
            android:icon="@drawable/ic_dates"
            android:orderInCategory="1"
            android:title="@string/title_section_dates" />
        <item
            android:id="@+id/navigation_news"
            android:icon="@drawable/ic_news"
            android:orderInCategory="1"
            android:title="@string/title_section_news" />
        <item
            android:id="@+id/navigation_certificates"
            android:icon="@drawable/ic_certificates"
            android:orderInCategory="1"
            android:title="@string/title_section_certificates" />
    </group>

    <group
        android:id="@+id/navigation_group_links"
        android:checkableBehavior="none" />

    <group
        android:id="@+id/navigation_group_sub"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_downloads"
            android:icon="@drawable/ic_download_folder"
            android:orderInCategory="3"
            android:title="@string/title_section_downloads" />
        <item
            android:id="@+id/navigation_helpdesk"
            android:checkable="false"
            android:icon="@drawable/ic_help"
            android:orderInCategory="3"
            android:title="@string/action_helpdesk" />
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings"
            android:orderInCategory="3"
            android:title="@string/title_section_settings" />
    </group>

</menu>
