<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <de.xikolo.views.MaxWidthFrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal|top"
            app:maxWidthLayout="576dp">

            <RelativeLayout
                android:id="@+id/containerLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="56dp">

                <ImageView
                    android:id="@+id/top_image"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="24dp" />

                <TextView
                    android:id="@+id/text_credentials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/top_image"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="16dp"
                    android:padding="4dp"
                    android:text="@string/login_with_credentials"
                    android:textColor="@color/apptheme_login_text"
                    android:textSize="14sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/text_credentials"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:theme="@style/LoginTextInput">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/apptheme_login_text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/input_layout_email"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:theme="@style/LoginTextInput">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/apptheme_login_text" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/textForgotPw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/input_layout_password"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/button_flat_dark"
                    android:padding="4dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/apptheme_login_text"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/Button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/textForgotPw"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="24dp"
                    android:padding="12dp"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/btnNew"
                    style="@style/Button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/btnLogin"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/button_flat_dark"
                    android:text="@string/button_new"
                    android:textColor="@color/apptheme_login_text" />

            </RelativeLayout>

        </de.xikolo.views.MaxWidthFrameLayout>

    </android.support.v4.widget.NestedScrollView>

    <include layout="@layout/toolbar_login" />

</FrameLayout>
